# airfoil-cfd

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
cases/template/constant/: physicalProperties
cases/template/presets/: momentumTransport.LES  momentumTransport.RAS
cases/template/system/: blockMeshDict  controlDict  decomposeParDict  fieldAverage  forceCoeffs  fvSchemes  fvSolution  probes  snappyHexMeshDict  surfaceFeaturesDict  surfaces
scripts/: 01_install_multipass.sh  02_launch_instance.sh  03_install_openfoam13.sh  04_mount_project.sh  les_postprocess.py  of.sh  paraview_les.py  paraview_mac.py  plot_acoustics.py  plot_les_analysis.py  plot_les_vorticity.py  plot_polar.py  run_sweep.sh
src/airfoil_cfd/: __init__.py  acoustics.py  case.py  cli.py  geometry.py  postprocess.py
tests/: test_geometry.py
